--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,33 +1,3 @@
-.wrapper {
-}
-
-hr {
-  border: none; /* Убираем границу */
-  background-color: rgb(185, 185, 185); /* Цвет линии */
-  height: 1px; /* Толщина линии */
-  margin-top: 15px;
-  margin-right: 15px;
-}
-
-.info {
-  /* border: 2px solid black; */
-  background-color: rgb(255, 255, 255);
-  margin: 8px;
-  padding: 8px;
-  border-radius: 5px;
-  margin-right: 15px;
-}
-
-.myName,
-.description,
-hr {
-  margin-left: 16px;
-}
-
-.myName {
-  font-size: 30px;
-}
-
 .AllPosts {
   padding: 10px 0px 10px 10px;
   background-color: #fff;
@@ -59,7 +29,7 @@ hr {
   vertical-align: middle;
   /* color: #a7a7a7; */
   margin: 0 auto;
-  background-color: #fce0f9;
+  background-color: #f5f5f5;
 }
 
 .button {
