--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -4,8 +4,13 @@
     "img img"
     "main posts";
   grid-template-columns: 300px 1fr;
-  background-color: #fce0f9;
-  border-radius: 4px;
+  /* background-color: #fce0f9;  <- pink color (like bc img) */
+  background-color: #f1f1f1;
+  border-radius: 5px;
+  /* padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 8px; */
+  padding: 10px 0px 10px 8px;
 }
 
 .ProfileInfo {
@@ -16,8 +21,9 @@
   grid-area: posts;
 }
 
-.img {
+/* .img {
   grid-area: img;
   width: 100%;
   height: 80px;
-}
+  opacity: 0;
+} */
